--- a/packages/web/styles/base.css
+++ b/packages/web/styles/base.css
@@ -389,7 +389,7 @@ form input {
 
 form input:focus {
   outline: none;
-  box-shadow: 0px 0px 10px var(--heading-color);
+  box-shadow: 0px 0px 1px 2px var(--heading-color);
 }
 
 .uses-intro,
