--- a/packages/web/styles/base.css
+++ b/packages/web/styles/base.css
@@ -318,12 +318,19 @@ hr {
   color: var(--heading-color);
 }
 
-footer,
-footer>a {
+footer {
   text-align: center;
   font-size: 13px;
   padding: 100px 0;
   color: var(--secondary-color);
+}
+
+footer>a {
+  text-align: center;
+  font-size: 13px;
+  color: var(--heading-color);
+  text-decoration: none;
+  border-bottom: 1px var(--heading-color) dashed;
 }
 
 .author {
