--- a/packages/web/styles/base.css
+++ b/packages/web/styles/base.css
@@ -221,7 +221,8 @@ h6 {
   margin: 50px 0 30px;
 }
 
-@media (max-width: 400px){
+@media (max-width: 400px) {
+
   .writing-title-h1,
   .uses-h1,
   .about-h1 {
@@ -229,7 +230,8 @@ h6 {
   }
 }
 
-@media (max-width: 300px){
+@media (max-width: 300px) {
+
   .writing-title-h1,
   .uses-h1,
   .about-h1 {
@@ -255,8 +257,34 @@ h6 {
   letter-spacing: -1px;
 }
 
-.writing-container img {
+.writing-container img,
+img.nice {
   width: 100%;
+  border-radius: 13px;
+  -webkit-border-radius: 13px;
+  -moz-border-radius: 13px;
+  -ms-border-radius: 13px;
+  -o-border-radius: 13px;
+  translate: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+  transition: all .6s;
+  -webkit-transition: all .6s;
+  -moz-transition: all .6s;
+  -ms-transition: all .6s;
+  -o-transition: all .6s;
+}
+
+.writing-container img:hover,
+img.nice:hover {
+  translate: scale(1.03);
+  -webkit-transform: scale(1.03);
+  -moz-transform: scale(1.03);
+  -ms-transform: scale(1.03);
+  -o-transform: scale(1.03);
+  /* box-shadow: 3px 3px 20px var(--highlight-color); */
 }
 
 .writing-container ul {
@@ -470,6 +498,22 @@ form input:focus {
   color: var(--heading-color);
   text-decoration: none;
   border-bottom: 1px var(--heading-color) dashed;
+}
+
+.writing-image {
+  object-fit: cover;
+  width: 100%;
+  height: 600px;
+  /* border-radius: 25px; */
+  /* margin-top: 40px; */
+}
+
+@media (max-width: 1000px) {
+  .writing-image {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+  }
 }
 
 .about-intro h3 {
