👌 IMPROVE: Make subscriber box input bg white

--- a/packages/web/styles/base.css
+++ b/packages/web/styles/base.css
@@ -481,6 +481,7 @@ form input {
   -moz-border-radius: 20px;
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
+  background-color: #fff;
 }
 
 form input:focus {
